apps/pihole/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      abels:
        app: pihole
    spec:
      containers:
        - image: pihole/pihole:2022.05
          imagePullPolicy: IfNotPresent
          name: pihole
          volumeMounts:
            - name: pihole-pvc
              mountPath: "/etc/pihole"
            - name: dnsmasq-pvc
              mountPath: "/etc/dnsmasq.d"
          restartPolicy: Always
      volumes:
        - name: pihole-pvc
          persistentVolumeClaim:
            claimName: pihole-pvc
        - name: dnsmasq-pvc
          persistentVolumeClaim:
            claimName: dnsmasq-pvc
