apps/pihole/deployment-ha.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-1
  labels:
    app: pihole-1
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole-1
  template:
    metadata:
      labels:
        app: pihole-1
        name: pihole-1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - "blue"
      containers:
      - name: pihole
        image: pihole/pihole:2025.04.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: pihole-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-etc-volume-dnsmasq
          mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: pihole-etc-volume
        persistentVolumeClaim:
          claimName: pihole-v2
      - name: pihole-etc-volume-dnsmasq
        persistentVolumeClaim:
          claimName: pihole-dnsmasq-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-2
  labels:
    app: pihole-2
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole-2
  template:
    metadata:
      labels:
        app: pihole-2
        name: pihole-2
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - "green"
      containers:
      - name: pihole
        image: pihole/pihole:2025.04.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: pihole-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-etc-volume-dnsmasq
          mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: pihole-etc-volume
        persistentVolumeClaim:
          claimName: pihole-v2-2
      - name: pihole-etc-volume-dnsmasq
        persistentVolumeClaim:
          claimName: pihole-dnsmasq-v2-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orbital-sync
  labels:
    app: orbital-sync
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: orbital-sync
  template:
    metadata:
      labels:
        app: orbital-sync
        name: orbital-sync
    spec:
      containers:
      - name: orbital-sync
        image: ghcr.io/mattwebbio/orbital-sync:1.8.4-distroless
        imagePullPolicy: Always
