apps/pihole/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2023.03.1
        imagePullPolicy: Always
        volumeMounts:
        - name: pihole-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-etc-volume-dnsmasq
          mountPath: "/etc/dnsmasq.d"
          subPath: dnsmasq.d
      volumes:
      - name: pihole-etc-volume
        persistentVolumeClaim:
          claimName: pihole
