apps/pihole/Service-ha.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-1
  annotations:
     io.cilium/lb-ipam-ips: 192.168.0.227
  labels: 
    type: l2
spec:
  selector:
    app: pihole-1
  type: LoadBalancer
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
    - port: 80
      targetPort: 80
      name: pihole-admin
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-2
  annotations:
     io.cilium/lb-ipam-ips: 192.168.0.229
  labels: 
    type: l2
spec:
  selector:
    app: pihole-2
  type: LoadBalancer
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
    - port: 80
      targetPort: 80
      name: pihole-admin
