apps/pihole/pihole.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    name: pihole
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2022.05
        ports:
        - name: svc-53-udp
          containerPort: 53
          protocol: UDP
        - name: svc-53-tcp
          containerPort: 53
          protocol: TCP
        - name: svc-ui
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            port: svc-ui
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: svc-ui
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 10
        resources:
          limits:
            memory: "300Mi"
            cpu: "250m"
          requests:
            memory: "50Mi"
            cpu: "100m"
          volumeMounts:
            - name: pihole-pvc
              mountPath: "/etc/pihole"
            - name: dnsmasq-pvc
              mountPath: "/etc/dnsmasq.d"
          restartPolicy: Always
      volumes:
        - name: pihole-pvc
          persistentVolumeClaim:
            claimName: pihole-pvc
        - name: dnsmasq-pvc
          persistentVolumeClaim:
            claimName: dnsmasq-pvc
---
kind: Service 
apiVersion: v1 
metadata:
  name: pihole-ui-svc
  namespace: pihole
spec:
  selector:
    app: pihole
  type: ClusterIP
  ports:
    - name: 80-tcp
      port: 80
      targetPort: 80
      protocol: TCP
---
kind: Service 
apiVersion: v1 
metadata:
  name: pihole-dns-svc 
  namespace: pihole
spec:
  selector:
    app: pihole
  type: ClusterIP
  clusterIP: 10.43.0.30
  ports:
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
  externalTrafficPolicy: Local
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.200
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
  externalTrafficPolicy: Local
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: pihole.192.168.0.200.nip.io
    http:
      paths:
      - pathType: Prefix 
        path: "/admin"
        backend:
          service:
            name: pihole-ui-svc
            port:
              number: 80
